Book description rendering

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -74,7 +74,7 @@ layout: default
 <section class="book-description">
   <div class="container">
     <h2>About This Book</h2>
-    <div class="description-content">{{ page.full_description }}</div>
+    <div class="description-content">{{ page.full_description | markdownify }}</div>
   </div>
 </section>
 
