--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -88,23 +88,25 @@ layout: default
         {% unless book.url == page.url %}
         <div class="book-card-small">
           <div class="book-cover-small book-cover-square">
-            {% if book.cover_image %}
-              {% assign cover_base = book.cover_image | replace: '-cover-large.jpg', '' | replace: '-cover.jpg', '' | replace: '.jpg', '' %}
-              {% assign square_small = cover_base | append: '-cover-square-small.jpg' %}
-              {% assign square_medium = cover_base | append: '-cover-square-medium.jpg' %}
-              {% assign square_large = cover_base | append: '-cover-square-large.jpg' %}
-              <img 
-                src="{{ square_medium | relative_url }}" 
-                srcset="{{ square_small | relative_url }} 250w, {{ square_medium | relative_url }} 400w, {{ square_large | relative_url }} 600w"
-                sizes="(max-width: 768px) 250px, 400px"
-                alt="{{ book.title }}" 
-                loading="lazy">
-            {% else %}
-              <div class="book-placeholder-small">
-                <!-- <span class="book-title-small">{{ book.title }}</span> -->
-                <span class="cover-coming-soon-small">Cover Coming Soon</span>
-              </div>
-            {% endif %}
+            <a href="{{ book.url | relative_url }}" class="book-cover-link">
+              {% if book.cover_image %}
+                {% assign cover_base = book.cover_image | replace: '-cover-large.jpg', '' | replace: '-cover.jpg', '' | replace: '.jpg', '' %}
+                {% assign square_small = cover_base | append: '-cover-square-small.jpg' %}
+                {% assign square_medium = cover_base | append: '-cover-square-medium.jpg' %}
+                {% assign square_large = cover_base | append: '-cover-square-large.jpg' %}
+                <img 
+                  src="{{ square_medium | relative_url }}" 
+                  srcset="{{ square_small | relative_url }} 250w, {{ square_medium | relative_url }} 400w, {{ square_large | relative_url }} 600w"
+                  sizes="(max-width: 768px) 250px, 400px"
+                  alt="{{ book.title }}" 
+                  loading="lazy">
+              {% else %}
+                <div class="book-placeholder-small">
+                  <!-- <span class="book-title-small">{{ book.title }}</span> -->
+                  <span class="cover-coming-soon-small">Cover Coming Soon</span>
+                </div>
+              {% endif %}
+            </a>
           </div>
           <div class="book-info-small">
             <h3><a href="{{ book.url | relative_url }}">{{ book.title }}</a></h3>
