Added roudn favicons

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,14 @@
     
     {%- comment -%} Title/description/canonical are handled by jekyll-seo-tag {%- endcomment -%}
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="{{ '/assets/images/wild-imagination-logo.jpg' | relative_url }}">
-    <link rel="apple-touch-icon" href="{{ '/assets/images/wild-imagination-logo.jpg' | relative_url }}">
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | relative_url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | relative_url }}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ '/assets/images/favicons/android-chrome-192x192.png' | relative_url }}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{{ '/assets/images/favicons/favicon-512x512.png' | relative_url }}">
+    <link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
     
     {%- comment -%} Social meta (OG/Twitter) also handled by jekyll-seo-tag {%- endcomment -%}
     
@@ -51,7 +56,7 @@
       "name": "{{ site.title }}",
       "description": "{{ site.description }}",
       "url": "{{ site.url }}{{ site.baseurl }}",
-      "logo": "{{ '/assets/images/wild-imagination-logo.jpg' | absolute_url }}",
+      "logo": "{{ '/assets/images/favicons/favicon-512x512.png' | absolute_url }}",
       "foundingDate": "2025",
       "founder": {
         "@type": "Person",
